--- a/src/mistory_ui-app/epilog-detail.html
+++ b/src/mistory_ui-app/epilog-detail.html
@@ -25,23 +25,31 @@
                 handleAs="json">
         </iron-ajax>
 
-	<div> here I am </div>
 	<paper-card>
 		<paper-input label="Title" value="{{epilog.title}}"></paper-input>
 		<paper-textarea label="Details" value="{{epilog.detail}}"></paper-textarea>
 		<paper-button raised on-tap="_handleSaveButton">Save</paper-button>
 	</paper-card>
 
+<!-- 
+                headers='{"Access-Control-Request-Headers":"*", "Authorization" : "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ0eXBlIjoiYXBpa2V5IiwiYXBwTmFtZSI6Im1pc3RvcnkiLCJpYXQiOjE0Nzc2MTYyMzN9.jp2s5d2pQHo4DT6nMozb3t_XqdXFeDAbCKS12pMD6AA"}'
+                headers='{"Access-Control-Request-Headers":"*", "ETag": {{ETag}}, "Authorization" : "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ0eXBlIjoiYXBpa2V5IiwiYXBwTmFtZSI6Im1pc3RvcnkiLCJpYXQiOjE0Nzc2MTYyMzN9.jp2s5d2pQHo4DT6nMozb3t_XqdXFeDAbCKS12pMD6AA"}'
+                headers='{"Authorization" : "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ0eXBlIjoiYXBpa2V5IiwiYXBwTmFtZSI6Im1pc3RvcnkiLCJpYXQiOjE0Nzc2MTYyMzN9.jp2s5d2pQHo4DT6nMozb3t_XqdXFeDAbCKS12pMD6AA"}'
+-->
+
+	<div>ETag: '{ "ETag": "{{ETag}}" }'
+
         <iron-ajax
 		id='put'
 		method='PUT'
-                headers='{"Authorization" : "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ0eXBlIjoiYXBpa2V5IiwiYXBwTmFtZSI6Im1pc3RvcnkiLCJpYXQiOjE0Nzc2MTYyMzN9.jp2s5d2pQHo4DT6nMozb3t_XqdXFeDAbCKS12pMD6AA"}'
 		content-type='application/json'
+                headers$='{"ETag": "{{ETag}}", "Authorization" : "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ0eXBlIjoiYXBpa2V5IiwiYXBwTmFtZSI6Im1pc3RvcnkiLCJpYXQiOjE0Nzc2MTYyMzN9.jp2s5d2pQHo4DT6nMozb3t_XqdXFeDAbCKS12pMD6AA"}'
 		body='{{epilog}}'
                 url='http://{{apiendpoint}}:3001/api/v1/epilogs/{{dataId}}'
 		on-response='_handlePutResponse'
                 handleAs='json'>
         </iron-ajax>
+
 
   </template>
 
@@ -62,7 +70,7 @@
                 apiendpoint: {
                         type: String,
                         notify: true
-                }
+                },
 	},
 
 	observers: [
@@ -71,8 +79,10 @@
 
 	_handleGetResponse: function(res, req) {
 		//console.log("_handleGetResponse headers=", req.xhr.getAllResponseHeaders());
-		console.log("_handleGetResponse headers=", req.xhr);
-		console.log("_handleGetResponse=", res);
+		//var hdrs = req.xhr.getAllResponseHeaders().split("\n");
+		//console.log("hdrs=", hdrs);
+		this.ETag = req.xhr.getResponseHeader("ETag");
+		console.log("ETag = ", this.ETag);
 	},
 
 	_handleSaveButton: function(e) {
@@ -80,8 +90,9 @@
 		this.$.put.generateRequest();
 	},
 
-	_handlePutResponse: function(res) {
-		printObj(res);
+	_handlePutResponse: function(res, req) {
+		this.ETag = req.xhr.getResponseHeader("ETag");
+		console.log("put ETag = ", this.ETag);
 	},
 
 	printObj: function(o) {
